Fix Web Mentions reply bug on mobile

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -942,6 +942,13 @@ pre {
   left: 0;
 }
 
+@media (max-width: 56.25em) {
+  .webmention-replies-item .webmention-author .webmention-author-avatar,
+  .webmention-mentions-item .webmention-author .webmention-author-avatar {
+    position: static;
+  }
+}
+
 /* Needed for Safari to hide the index properly */
 @media print {
   .main {
